# SkellyUltra

./: QUICK_START.md  README.md  hacs.json
.github/workflows/: validate_hacs.yaml
custom_components/skelly_ultra/: README.md  __init__.py  client_adapter.py  config_flow.py  const.py  coordinator.py  helpers.py  image.py  light.py  manifest.json  media_player.py  number.py  select.py  sensor.py  services.py  services.yaml  strings.json  switch.py
custom_components/skelly_ultra/skelly_ultra_pkg/: __init__.py  audio_processor.py  client.py  commands.py  constants.py  file_transfer.py  parser.py
custom_components/skelly_ultra/skelly_ultra_srv/: .dockerignore  Dockerfile  QUICKSTART.md  README.md  __init__.py  audio_player.py  ble_session_manager.py  bluetooth_manager.py  colored_logging.py  docker-compose.yml  pair_device.sh  pipewire_utils.py  pyproject.toml  requirements.txt  run_server.py  server.py  skelly-ultra-server.service
custom_components/skelly_ultra/translations/: en.json
