[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "skelly-ultra-server"
version = "1.0.0"
description = "REST server providing Bluetooth Classic audio playback and/or BLE proxy services for Ultra Skelly devices"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.0",
    "dbus-next>=0.2.0",
    "bleak>=0.21.0",
]

[project.scripts]
skelly-ultra-server = "skelly_ultra_srv.server:main"
